# reflex-chessboard

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  publish.yml
apps/demo_pgn_viewer/: .gitignore  pyproject.toml  rxconfig.py
apps/demo_pgn_viewer/demo_pgn_viewer/: demo_pgn_viewer.py
chessboard_demo/: requirements.txt  rxconfig.py
chessboard_demo/assets/: reflex_chessboard_shim.jsx
chessboard_demo/chessboard_demo/: chessboard_demo.py
custom_components/reflex_chessboard/: chessboard.py
docs/: development.md  spec.md
tests/: test_imports.py
